--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -8,13 +8,14 @@
 <body>
   <h1>This is My Portfolio</h1>
   <p>This is what i am currently learning</p>
-
+  
   <h2>My Skills</h2>
   <p>Front End Development</p>
   <p>Back End Develoopment</p>
 
   <h3>Learn with me</h3>
   <p>Join me on this interesting journey of my life</p>
+  <a href="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png">Join me</a>
   
 </body>
 </html>
