--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -15,7 +15,7 @@
 
   <h3>Learn with me</h3>
   <p>Join me on this interesting journey of my life</p>
-  <a href="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png">Join me</a>
+  <a href="tweets.html">Tweet</a>
   
 </body>
 </html>
