--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -6,6 +6,6 @@
   <title>Document</title>
 </head>
 <body>
-  
+  <blockquote class="twitter-tweet"><p lang="en" dir="ltr">Resurfaced Videos of what ladies do to Men in those Barbershops, Massage rooms, and SPAs is beyond the limits..Open 👇 <a href="https://t.co/SUXDrQQpZe">pic.twitter.com/SUXDrQQpZe</a></p>&mdash; Ja Siaya™🇰🇪 (@unsulliedwarior) <a href="https://twitter.com/unsulliedwarior/status/1968897991789482202?ref_src=twsrc%5Etfw">September 19, 2025</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 </body>
 </html>
