--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -6,16 +6,31 @@
   <title>Document</title>
 </head>
 <body>
-  <h1>This is My Portfolio</h1>
-  <p>This is what i am currently learning</p>
+  <header>
+    <ul>
+      <li><a href="base_index.html">Home</a></li>
+      <li><a href="tweets.html">Blog</a></li>
+    </ul>
+  </header>
   
-  <h2>My Skills</h2>
-  <p>Front End Development</p>
-  <p>Back End Develoopment</p>
+  <main>
+    <article>
+      <h1>This is My Portfolio</h1>
+      <p>This is what i am currently learning</p>
+      
+      <h2>My Skills</h2>
+      <p>Front End Development</p>
+      <p>Back End Develoopment</p>
 
-  <h3>Learn with me</h3>
-  <p>Join me on this interesting journey of my life</p>
-  <a href="tweets.html">Tweet</a>
+      <h3>Learn with me</h3>
+      <p>Join me on this interesting journey of my life</p>
+      
+      <aside>
+      <a href="tweets.html">Tweet</a>
+      </aside>
+
+    </article>
+  </main>
   
 </body>
 </html>
