--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -24,12 +24,14 @@
 
       <h3>Learn with me</h3>
       <p>Join me on this interesting journey of my life</p>
-      
-      <aside>
-      <a href="tweets.html">Tweet</a>
-      </aside>
 
+      <a href="tweets.html">Tweet</a>
     </article>
+
+    <aside>
+      <p>placeholder to add comment thread later</p>
+    </aside>
+
   </main>
   
 </body>
