--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -33,6 +33,10 @@
     </aside>
 
   </main>
+   <footer>
+    <p>Made by Nelson Nwakanma</p>
+    <a href="https://github.com/NELTECH-creator/My_First_Portfolio/tree/main" target="_blank">My Portfolio</a>
+  </footer>
   
 </body>
 </html>
