--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -19,7 +19,7 @@
       <blockquote class="twitter-tweet">
         <p lang="en" dir="ltr">Resurfaced Videos of what ladies do to Men in those Barbershops, Massage rooms, and SPAs is beyond the limits..Open 👇 
           <a href="https://t.co/SUXDrQQpZe">pic.twitter.com/SUXDrQQpZe</a>
-        </p>&mdash; Ja Siaya™🇰🇪 (@unsulliedwarior) 
+        </p>&mdash; Ja Siaya™🇰🇪 (@unsulliedwarior)
         <a href="https://twitter.com/unsulliedwarior/status/1968897991789482202?ref_src=twsrc%5Etfw">September 19, 2025
         </a>
       </blockquote> 
@@ -32,6 +32,9 @@
     </aside>
   </main>
 
-  <footer></footer>
+  <footer>
+    <p>Made by Nelson Nwakanma</p>
+    <a href="https://github.com/NELTECH-creator/My_First_Portfolio/tree/main" target="_blank">My Portfolio</a>
+  </footer>
 </body>
 </html>
