--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -23,7 +23,8 @@
         <a href="https://twitter.com/unsulliedwarior/status/1968897991789482202?ref_src=twsrc%5Etfw">September 19, 2025
         </a>
       </blockquote> 
-      <script async src="https://platform.twitter.com/widgets.js" charset="utf-8">
+      <script async 
+        src="https://platform.twitter.com/widgets.js" charset="utf-8">
       </script>
     </article>
 
@@ -36,6 +37,6 @@
     <p>Made by Nelson Nwakanma</p>
     <a href="https://github.com/NELTECH-creator/My_First_Portfolio/tree/main" target="_blank">My Portfolio</a>
   </footer>
-  
+
 </body>
 </html>
