--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -16,6 +16,7 @@
 
   <main>
     <article>
+      <h1>Post</h1>
       <blockquote class="twitter-tweet">
         <p lang="en" dir="ltr">Resurfaced Videos of what ladies do to Men in those Barbershops, Massage rooms, and SPAs is beyond the limits..Open 👇 
           <a href="https://t.co/SUXDrQQpZe">pic.twitter.com/SUXDrQQpZe</a>
@@ -26,11 +27,14 @@
       <script async 
         src="https://platform.twitter.com/widgets.js" charset="utf-8">
       </script>
+
+      <aside>
+        <p>placeholder to add comment thread later</p>
+     </aside>
+
     </article>
 
-    <aside>
-      <p>placeholder to add comment thread later</p>
-    </aside>
+   
   </main>
 
   <footer>
