--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -23,18 +23,12 @@
         </p>&mdash; Ja Siaya™🇰🇪 (@unsulliedwarior)
         <a href="https://twitter.com/unsulliedwarior/status/1968897991789482202?ref_src=twsrc%5Etfw">September 19, 2025
         </a>
-      </blockquote> 
-      <script async 
-        src="https://platform.twitter.com/widgets.js" charset="utf-8">
-      </script>
+      </blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
       <aside>
         <p>placeholder to add comment thread later</p>
-     </aside>
-
+      </aside>
     </article>
-
-   
   </main>
 
   <footer>
