--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -55,7 +55,13 @@
 
   <section id="contact">
     <h2>Contact</h2>
-    <p>Hi, I am Nelson, a passionate Fullstack Developer.</p>
+    <a href="malito:nwakanmae8@gmail.com" target="_blank">Email</a>
+    <a href="">LinkedIn</a>
+    <a href="">Github</a>
   </section>
+
+  <footer>
+    <p>All rights reserved &copy; 2025 Nelson Nwakanma</p>
+  </footer>
 </body>
 </html>
