--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -28,36 +28,54 @@
   <section id="projects">
     <h2>Projects</h2>
 
-    <article>
-      <h3>Front End Develoopment</h3>
+    <article class="project">
+      <h3>Front End Development</h3>
       <p>A full Front End Development tutorial</p>
-      <a href=""></a>
+      <a href="#" target="_blank">Project 1</a>
     </article>
 
-    <article>
+    <article class="project">
       <h3>Back End Development</h3>
-      <p></p>
-      <a href=""></a>
+      <p>Back End Development tutorial</p>
+      <a href="#" target="_blank"> Project 2</a>
     </article>
 
-    <article>
+    <article class="project">
       <h3>UI/UX Design</h3>
-      <p></p>
-      <a href=""></a>
+      <p>Product design template</p>
+      <a href="#" target="_blank"> Project 3</a>
     </article>
     
   </section>
 
   <section id="about">
-    <h2>About</h2>
-    <p>Hi, I am Nelson, a passionate Fullstack Developer.</p>
+    <h2>About Me</h2>
+
+    <p> <strong>My Skills</strong>
+      <ul>
+        <li>Communication</li>
+        <li>Critical Thinking</li>
+        <li>Problem solving</li>
+        <li>Leadership</li>
+        <li>Emotional Intelligence</li>
+      </ul>
+    </p>
+
+    <p> <strong>My hobbies</strong>
+      <ul>
+        <li>Reading</li>
+        <li>Painting</li>
+        <li>Playing Musical Instrument</li>
+      </ul>
+    </p>
+
   </section>
 
   <section id="contact">
     <h2>Contact</h2>
-    <a href="malito:nwakanmae8@gmail.com" target="_blank">Email</a>
-    <a href="">LinkedIn</a>
-    <a href="">Github</a>
+    <a href="https://malito:nwakanmae8@gmail.com" target="_blank">Email</a>
+    <a href="https://www.linkedin.com/in/nwakanma-nelson-44367335b?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank">LinkedIn</a>
+    <a href="" target="_blank">Github</a>
   </section>
 
   <footer>
