--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -26,11 +26,45 @@
       <p>Join me on this interesting journey of my life</p>
 
       <a href="tweets.html">Tweet</a>
-
-      <aside>
-       <p>placeholder to add comment thread later</p>
-      </aside>
     </article>
+
+    <aside>
+      <p>Just reading for now "placeholder to add comment thread later"</p>
+    </aside>
+    
+    <table>
+      <thead>
+        <tr>Name</tr>
+        <tr>Age</tr>
+        <tr>Country</tr>
+      </thead>
+
+      <tbody>
+        <td>john</td>
+        <td>25</td>
+        <td>USA</td>
+      </tbody>
+
+      <tbody>
+        <td>Emily</td>
+        <td>28</td>
+        <td>Canada</td>
+      </tbody>
+
+      <tbody>
+        <td>Michael</td>
+        <td>32</td>
+        <td>Australia</td>
+      </tbody>
+
+      <tbody>
+        <td>Sophia</td>
+        <td>21</td>
+        <td>UK</td>
+      </tbody>
+
+    </table>
+
   </main>
 
   <footer>
