--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Nelson Nwakanma-Personal Portfolio</title>
+  <meta charset="UTF-8">, <title>Nelson Nwakanma-Personal Portfolio</title>
 </head>
 <body>
   <header>
