--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<header>
   <meta charset="UTF-8">, <title>Nelson Nwakanma-Personal Portfolio</title>
-</head>
+</header>
 <body>
   <header>
     <h1>Nelson Nwakanma</h1>
