--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-<header>
-  <meta charset="UTF-8">, <title>Nelson Nwakanma-Personal Portfolio</title>
-</header>
+<head>
+  <meta charset="UTF-8">
+  <title>Nelson Nwakanma-Personal Portfolio</title>
+</head>
 <body>
   <header>
     <h1>Nelson Nwakanma</h1>
