--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -50,23 +50,21 @@
   <section id="about">
     <h2>About Me</h2>
 
-    <p> <strong>My Skills</strong>
-      <ul>
+    <p><strong>My Skills</strong></p>
+    <ul>
         <li>Communication</li>
         <li>Critical Thinking</li>
         <li>Problem solving</li>
         <li>Leadership</li>
         <li>Emotional Intelligence</li>
       </ul>
-    </p>
 
-    <p> <strong>My hobbies</strong>
-      <ul>
+    <p><strong>My hobbies</strong></p>
+    <ul>
         <li>Reading</li>
         <li>Painting</li>
         <li>Playing Musical Instrument</li>
       </ul>
-    </p>
 
   </section>
 
