--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 
   <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
     <title>Nelson Nwakanma-Personal Portfolio</title>
   </head>
-  
+
   <body>
     <header>
       <h1>Nelson Nwakanma</h1>
