--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -62,7 +62,6 @@
       </tbody>
 
     </table>
-    
     </article>
 
     <aside>
@@ -72,8 +71,7 @@
   </main>
 
   <footer>
-    <p>Made by Nelson Nwakanma</p>
-    <a href="https://github.com/NELTECH-creator/My_First_Portfolio/tree/main" target="_blank">My Portfolio</a>
+    <p>Made by Nelson Nwakanma <a href="https://github.com/NELTECH-creator/My_First_Portfolio/tree/main" target="_blank">My Portfolio</a></p>
   </footer>
 
 </body>
