--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -32,8 +32,8 @@
   </main>
 
   <footer>
-    <p>Made by Nelson Nwakanma</p>
-    <a href="https://github.com/NELTECH-creator/My_First_Portfolio/tree/main" target="_blank">My Portfolio</a>
+    <p>Made by Nelson Nwakanma<a href="https://github.com/NELTECH-creator/My_First_Portfolio/tree/main" target="_blank">My Portfolio</a></p>
+    
   </footer>
 
 </body>
