--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -71,7 +71,7 @@
   </main>
 
   <footer>
-    <p>Made by Nelson Nwakanma <a href="https://github.com/NELTECH-creator/My_First_Portfolio/tree/main" target="_blank">My Portfolio</a></p>
+    <p>Made by Nelson Nwakanma <a href="https://github.com/NELTECH-creator/My_First_Portfolio/tree/main" target="_blank">My Portfolio - </a></p>
   </footer>
 
 </body>
