--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -65,13 +65,13 @@
     </article>
 
     <aside>
-      <p>Just reading for now "placeholder to add comment thread later"</p>
+      <p>placeholder to add comment thread later</p>
     </aside>
     
   </main>
 
   <footer>
-    <p>Made by Nelson Nwakanma <a href="https://github.com/NELTECH-creator/My_First_Portfolio/tree/main" target="_blank">My Portfolio - </a></p>
+    <p>Made by Nelson Nwakanma - <a href="https://github.com/NELTECH-creator/My_First_Portfolio/tree/main" target="_blank">My Portfolio</a></p>
   </footer>
 
 </body>
