--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -72,7 +72,7 @@
 
     <section id="contact">
       <h2>Contact</h2>
-      <a href="https://malito:nwakanmae8@gmail.com" target="_blank">Email</a>
+      <a href="https://mailto:nwakanmae8@gmail.com" target="_blank">Email</a>
       <a href="https://www.linkedin.com/in/nwakanma-nelson-44367335b?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank">LinkedIn</a>
       <a href="" target="_blank">Github</a>
     </section>
