--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -38,6 +38,8 @@
       <article class="project">
         <h3>Back End Development</h3>
         <p>Back End Development tutorial</p>
+        <p>Back End Development tutorial</p>
+        <p>Back End Development tutorial</p>
         <a href="#" target="_blank"> Project 2</a>
       </article>
 
